<resources>
    <string name="app_name">Movie Catalogue</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="favorite">favorite</string>
    <string name="buy">BUY</string>
    <string name="close">Close</string>
    <string name="see_poster">See Poster</string>
    <string name="cari">Cari</string>
    <string name="home">home</string>
    <string name="settings">settings</string>
    <string name="pops">Popularity : %1$s</string>
    <string name="rating">Overal Rating : %1$s</string>

    <string name="fav_success_add">Success added into favorit!</string>
    <string name="fav_success_remove">Remove %1$s was Success!</string>
    <string name="movie_notice">Empty, add favorite movie now!</string>
    <string name="delete">One item was delete!</string>
    <string name="tv_notice">Empty, add favorite tv now!</string>
    <string name="appwidget_text">FAVORITE LIST</string>
    <string name="add_widget">Add widget</string>
    <string name="empty">EMPTY DATA</string>
    <string name="key_release">RELEASE</string>
    <string name="release_reminder_sum">Reminder showing the movie that released today</string>
    <string name="release_reminder">RELEASE REMINDER</string>
    <string name="key_daily">DAILY</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_sum">Remind you for return to this app</string>
</resources>
