<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_release"
        android:title="@string/release_reminder"
        android:textColor="@android:color/darker_gray"
        android:summary="@string/release_reminder_sum"
        android:theme="@style/MyMaterialTheme"
        app:iconSpaceReserved="false"/>
    <SwitchPreference
        android:defaultValue="false"
        android:key="@string/key_daily"
        android:title="@string/daily_reminder"
        android:textColor="@android:color/darker_gray"
        android:summary="@string/daily_reminder_sum"
        app:iconSpaceReserved="false"/>
</PreferenceScreen>